<resources>
    <string name="app_name">SensorsExamples</string>
    <string name="action_settings">Settings</string>

    <string name="accelerometer">Accelerometer</string>
    <string name="ambient_temperature">Ambient Temperature</string>
    <string name="magnetic_field">Magnetic Field</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="light">Light</string>
    <string name="proximity">Proximity</string>
    <string name="pressure">Pressure</string>
    <string name="relative_humidity">Relative Humidity</string>
    <string name="gravity">Gravity</string>
</resources>
